# azure-autostart-proxy

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  proxy.rs
