[package]
name = "azure-autostart-proxy"
authors = ["David Shen <me@pantherman594.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.8.0"
azure_identity = "0.9.0"
azure_mgmt_compute = "0.9.0"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
leb128 = "0.2.5"
tokio = { version = "1.25.0", features = ["full"] }
